--- a/AMLD-2020/AMLD_2020.ipynb
+++ b/AMLD-2020/AMLD_2020.ipynb
@@ -2,13 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 66,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "OxsTPZphD2ol"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# libraries\n",
     "import matplotlib.pyplot as plt\n",
@@ -16,17 +25,19 @@
     "import keplergl\n",
     "import pickle\n",
     "import pandas as pd\n",
+    "import time\n",
     "\n",
     "from collections import OrderedDict\n",
     "from pyproj import Proj\n",
     "from h3 import h3\n",
+    "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from geopandas import GeoSeries, GeoDataFrame\n",
     "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from geopandas import GeoSeries, GeoDataFrame\n",
+    "from rtree import index\n",
     "\n",
     "from utils.OSRMFramework import OSRMFramework\n",
     "from utils.RouteAnnotator import RouteAnnotator\n",
@@ -3562,24 +3573,142 @@
     "* Retrieve all geometries from inside the leaf node (or from neighbors leaf nodes bounding boxes as well)\n",
     "* Calculate distances, sort and select K closest  \n",
     "\n",
-    "The R-Tree helps with filtering out the majority of the dataset that lives outside of the point's bounding box. After the big filtering is done, all the other calculations follow in the same way.\n",
+    "The R-Tree helps with filtering out the majority of the dataset that lives outside of the point's bounding box. After the big filtering is done, all the other calculations follow in the same way.   \n",
     "  \n",
-    "[Here](https://geoffboeing.com/2016/10/r-tree-spatial-index-python/) is an example that filter streets based on a city polygon using R-Trees.  Lets see a comparison between a naive KNN implementation it's spatial index enhanced version:"
+    "[Here](https://geoffboeing.com/2016/10/r-tree-spatial-index-python/) is an example that filter streets based on a city polygon using R-Trees.\n",
+    "  \n",
+    "Lets say we wanted to check which routes intersect with a route of interest that we manually selected. Geopandas can perform the `intersects` operation in his package but the operation is still done element per element. With the R-Tree, we can first subselect close by elements and then only perform `intersects` with a small subset of the total dataset. With bigger datasets, this difference in approaches can lead to big differences in performance, as we can see in the example below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def create_r_tree(gdf, geometry_col):\n",
+    "\n",
+    "    #### build r-tree\n",
+    "    idx = index.Index()\n",
+    "    #Populate R-tree index with bounds of grid cells\n",
+    "    for ix, cell in gdf.iterrows():\n",
+    "        # assuming cell is a shapely object\n",
+    "        idx.insert(ix, cell[geometry_col].bounds)\n",
+    "    return idx\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N Samples: 7500\n",
+      "# intersecting routes found without index: 6\n",
+      "23\n",
+      "# intersecting routes found with index: 6 \n",
+      "\n",
+      "N Samples: 15000\n",
+      "# intersecting routes found without index: 20\n",
+      "65\n",
+      "# intersecting routes found with index: 20 \n",
+      "\n",
+      "N Samples: 22500\n",
+      "# intersecting routes found without index: 30\n",
+      "98\n",
+      "# intersecting routes found with index: 30 \n",
+      "\n",
+      "N Samples: 30000\n",
+      "# intersecting routes found without index: 39\n",
+      "131\n",
+      "# intersecting routes found with index: 39 \n",
+      "\n",
+      "N Samples: 37500\n",
+      "# intersecting routes found without index: 47\n",
+      "165\n",
+      "# intersecting routes found with index: 47 \n",
+      "\n",
+      "N Samples: 45000\n",
+      "# intersecting routes found without index: 58\n",
+      "199\n",
+      "# intersecting routes found with index: 58 \n",
+      "\n",
+      "N Samples: 52500\n",
+      "# intersecting routes found without index: 69\n",
+      "233\n",
+      "# intersecting routes found with index: 69 \n",
+      "\n",
+      "N Samples: 60000\n",
+      "# intersecting routes found without index: 87\n",
+      "271\n",
+      "# intersecting routes found with index: 87 \n",
+      "\n",
+      "N Samples: 67500\n",
+      "# intersecting routes found without index: 93\n",
+      "298\n",
+      "# intersecting routes found with index: 93 \n",
+      "\n",
+      "N Samples: 75000\n",
+      "# intersecting routes found without index: 105\n",
+      "334\n",
+      "# intersecting routes found with index: 105 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_geoix = routes_train.loc[(routes_train['distance_m'] > 100) & (routes_train['distance_m'] < 500)]\n",
+    "df_geoix = GeoDataFrame(df_geoix, geometry='route')\n",
+    "n_samples = np.arange(7500, 75001, 7500)\n",
+    "times_no_geoix = []\n",
+    "times_geoix = []\n",
+    "intersect_line = df_geoix.loc[1584]['route']\n",
+    "\n",
+    "for n_sample in n_samples:\n",
+    "    print(f'N Samples: {n_sample}')\n",
+    "    df_geoix_sample = df_geoix.sample(n_sample, replace=True, random_state=42).reset_index(drop=True)\n",
+    "    idx = create_r_tree(df_geoix_sample, 'route')\n",
+    "    \n",
+    "    #### without index\n",
+    "    time_no_geoix = time.time()\n",
+    "    filter_1 = df_geoix_sample.intersects(intersect_line)\n",
+    "    routes_ix = filter_1[filter_1 == True].index\n",
+    "    times_no_geoix.append(time.time() - time_no_geoix)\n",
+    "    print(f'# intersecting routes found without index: {len(routes_ix)}')\n",
+    "    \n",
+    "    #### with index\n",
+    "    # Filter possible candidates by bouding boxes\n",
+    "    time_with_geoix = time.time()\n",
+    "    idxs = list(idx.intersection(intersect_line.bounds))\n",
+    "    if(len(idxs) > 0):\n",
+    "        # Now do actual intersection\n",
+    "        filter_2 = df_geoix_sample.loc[idxs].intersects(intersect_line)\n",
+    "        routes_ix = df_geoix_sample.loc[filter_2[filter_2 == True].index]\n",
+    "        times_geoix.append(time.time() - time_with_geoix)\n",
+    "        print(f'# intersecting routes found with index: {len(routes_ix)} \\n')\n",
+    "    \n",
+    "plt.plot(n_samples, times_no_geoix)\n",
+    "plt.plot(n_samples, times_geoix)\n",
+    "plt.title('Comparison between search times without index and R-Tree')\n",
+    "plt.xlabel('Number of Geometries')\n",
+    "plt.ylabel('Search Time (seconds)')\n",
+    "plt.legend(['Without Index', 'R-Tree']);        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<div class=\"alert alert-block alert-info\">     \n",
+    "You might have notices the first line of code in the code block above, where I filtered for short routes. The reason I've done this is that the spatial index is efficient when the object you're trying to join with results in a small number of intersection with other elements. If we had selected a long street that intersected with most routes from our dataset, the index would filter almost no elements and the following search operation would be similar to the one performed by GeoPandas\n",
+    "</div>    "
+   ]
   },
   {
    "cell_type": "markdown",
