added windows users instructions

--- a/AMLD-2020/AMLD_2020.ipynb
+++ b/AMLD-2020/AMLD_2020.ipynb
@@ -4068,17 +4068,34 @@
     "--> `--segment-speed-file /data/traffic_file.csv`.  \n",
     "\n",
     "<div class=\"alert alert-block alert-info\">  \n",
-    "    \n",
-    "* docker run -t -v \"${PWD}:/data\" osrm/osrm-backend osrm-extract -p /opt/car.lua /data/new_york_city.osm.pbf\n",
     "\n",
-    "* docker run -t -v \"${PWD}:/data\" osrm/osrm-backend osrm-partition /data/new_york_city.osm.pbf\n",
+    "* <b>Running in you local machine:</b>  \n",
     "\n",
-    "* docker run -t -v \"${PWD}:/data\" osrm/osrm-backend osrm-customize /data/new_york_city.osm.pbf `--segment-speed-file /data/test_traffic.csv`\n",
+    "* docker run -t -v \"${PWD}:/data\" osrm/osrm-backend osrm-extract -p /opt/car.lua /data/router/new_york_city.osm.pbf\n",
     "\n",
-    "* docker run -t -i -p 5000:5000 -v \"${PWD}:/data\" osrm/osrm-backend osrm-routed --algorithm mld /data/new_york_city.osm.pbf  \n",
+    "* docker run -t -v \"${PWD}:/data\" osrm/osrm-backend osrm-partition /data/router/new_york_city.osm.pbf\n",
+    "\n",
+    "* docker run -t -v \"${PWD}:/data\" osrm/osrm-backend osrm-customize /data/router/new_york_city.osm.pbf `--segment-speed-file /data/data/test_traffic.csv`\n",
+    "\n",
+    "* docker run -t -i -p 5000:5000 -v \"${PWD}:/data\" osrm/osrm-backend osrm-routed --algorithm mld /data/router/new_york_city.osm.pbf  \n",
+    "</div>\n",
+    "\n",
+    "<div class=\"alert alert-block alert-info\">  \n",
+    "\n",
+    "* <b>Manual execution for AMLD Workshop, in the workshop's root directory:</b>  \n",
+    "\n",
+    "* docker-compose stop osrm-router\n",
+    "\n",
+    "* docker-compose rm osrm-router\n",
+    "\n",
+    "* docker-compose create osrm-router\n",
+    "\n",
+    "* docker run -t -v \"${PWD}:/data\" osrm/osrm-backend osrm-customize /data/router/new_york_city.osm.pbf --segment-speed-file /data/data/test_traffic.csv  \n",
+    "\n",
+    "* docker-compose start osrm-router\n",
     "</div>\n",
     "  \n",
-    "The commands above are already coded in the file `restart_osrm_traffic.sh`. By executing it, we're able to stop the current router in the docker-compose containers, update the router with traffic information and restart it without having the stop the workshop's docker-compose structure, *i.e.*, without stoping this jupyter notebook.  \n",
+    "The commands above are already coded in the file `restart_osrm_traffic.sh`. **If you can't execute the shell script, like Windows users, you can execute the above commands by copying/pasting them in your terminal.** By executing it, we're able to stop the current router in the docker-compose containers, update the router with traffic information and restart it without having the stop the workshop's docker-compose structure, *i.e.*, without stoping this jupyter notebook.  \n",
     "  \n",
     "* In your terminal, in the workshop's root folder, execute the shell script.\n",
     "\n",
@@ -4943,7 +4960,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
