added eva parts and image from h3

--- a/AMLD-2020/AMLD_2020.ipynb
+++ b/AMLD-2020/AMLD_2020.ipynb
@@ -708,7 +708,10 @@
     "# minimum fare = $2.5: https://www1.nyc.gov/site/tlc/passengers/taxi-fare.page\n",
     "\n",
     "display(df_train['fare_amount'].describe(percentiles=[.01, .05, .1, .90,.95,.99]))\n",
-    "df_train = df_train.loc[(df_train['fare_amount'] > 2.5) & (df_train['fare_amount'] < 52)]\n",
+    "\n",
+    "### df_train = df_train.loc[(df_train['fare_amount'] > 2.5) & (df_train['fare_amount'] < 52)]\n",
+    "df_train = df_train.loc[(df_train['fare_amount'] >= 2.5) & (df_train['fare_amount'] < 52)]\n",
+    "\n",
     "\n",
     "plt.hist(df_train['fare_amount'], bins='auto')\n",
     "plt.title('Histogram of Fare')\n",
@@ -722,16 +725,17 @@
    "source": [
     "## Average demand per region over 1 weekday - H3\n",
     "\n",
-    "**TODO**: What is H3?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: understand and refine this step (Eva)"
+    "The analysis of large location data sets can be done by aggregating the locations in areas. To do this we could use zip codes, but the areas all have different sizes and may not describe real neigbour hood similarities. \n",
+    "\n",
+    "Therefore, a regular grid is a better solution. Only three polygons tile regularly (triangles, squares and hexagons) and only hexagons have the same distances to their neighbor cells (you may want to check this with a small drawing). Furthermore, the earth is not flat, but almost a sphere. Since a grid is only two dimensional, [projection](https://xkcd.com/977/) is needed. With the gnomonic projection, the earth is projected on an icosahedron, where the hexagons can be put on its surfaces ([more information](https://eng.uber.com/h3/)).   \n",
+    "\n",
+    "<img src=\"images/h3_proj.png\" width=\"200\"> \n",
+    "<center>Image source - <a href=\"https://eng.uber.com/h3/\">https://eng.uber.com/h3/</a></center> \n",
+    "\n",
+    "\n",
+    "We will use [H3](https://uber.github.io/h3), Uber's open source geospational indexing system and use it for visualisations. The size of the hexagons is defined by the [resolution](https://uber.github.io/h3/#/documentation/core-library/resolution-table), e.g. a resolution of 7 results in a hexagon area of 5 square km. The size is like a zoom level, the higher the value, the higher the resolution and the lower the area.\n",
+    "\n",
+    "In the following we will calculate the demand per heaxagon on a given weekday and visualise it with kepler."
    ]
   },
   {
@@ -877,6 +881,13 @@
     }
    ],
    "source": [
+    "## helper function\n",
+    "from datetime import timedelta\n",
+    "\n",
+    "\n",
+    "def add_day(day, reference_day='2019-01-07'):\n",
+    "    return pd.to_datetime(reference_day) + timedelta(days=day)\n",
+    "\n",
     "def average_demand_weekday(df,\n",
     "                           pickup_latitude='pickup_latitude', pickup_longitude='pickup_longitude',\n",
     "                           dropoff_latitude='dropoff_latitude', dropoff_longitude='dropoff_longitude',\n",
@@ -888,6 +899,11 @@
     "                                                                                    df[pickup_longitude])]\n",
     "    df['dropoff_h3'] = [h3.geo_to_h3(lat, long, res=resolution) for lat, long in zip(df[dropoff_latitude], \n",
     "                                                                                    df[dropoff_longitude])]\n",
+    "    \n",
+    "    df['pickup_datetime'] = pd.to_datetime(df_train['pickup_datetime'], utc=True).dt.tz_convert('Europe/Berlin')\n",
+    "\n",
+    "\n",
+    "    \n",
     "    # weekday\n",
     "    df['weekday'] = df[pickup_datetime].dt.dayofweek\n",
     "    \n",
@@ -895,6 +911,11 @@
     "    df_aggregated = df.groupby(['pickup_h3','weekday']).size().reset_index(name='counts')\n",
     "    \n",
     "    df_demand = df.merge(df_aggregated, how = 'inner', on = ['pickup_h3', 'weekday'])\n",
+    "    \n",
+    "    # introduce a reference day as a reference week to have a playback option in kepler\n",
+    "    df_demand['ref_week_date'] = df_demand.weekday.apply(add_day)\n",
+    "\n",
+    "\n",
     "    return df_demand\n",
     "\n",
     "df_hex = average_demand_weekday(df_train, resolution=H3_RES_ANALYSIS)\n",
@@ -909,14 +930,11 @@
     "In the following cell you can play a little bit with hexagons.\n",
     "Ideas to do:\n",
     "\n",
-    "Open the menu >\n",
-    "Toggle the views of the already loaded visualisations\n",
-    "Create a new H3 layer and choose as the hex_id either pickup_h3 or dropoff_h3\n",
-    "Set the color to count\n",
-    "Right next to the layer tool is the filter tool where you can add a filter with the weekday\n",
-    "More ideas:\n",
-    "\n",
-    "Check other visualisations (arc, hexbin, ...)"
+    "* Open the menu >\n",
+    "* Toggle the views of the already loaded visualisations\n",
+    "* Create a new H3 layer and choose as the hex_id either pickup_h3 and dropoff_h3\n",
+    "* Set the color to count (single hue to distinguish between pickup and dropoff) To do that, click on the 3 points menue.\n",
+    "* Right next to the layer tool is the filter tool where you can add a filter with the weekday"
    ]
   },
   {
@@ -1170,7 +1188,7 @@
     "y_test_pred_lazy = [median_f] * df_test.shape[0]                      # array with same length as y_test\n",
     "\n",
     "rmse = np.sqrt(mean_squared_error(df_test[TARGET], y_test_pred_lazy)) # RMSE\n",
-    "iteration_results['exp_0_lazy_rmse'] = rmse                             # store in experiments results\n",
+    "iteration_results['exp_0_lazy_rmse'] = rmse                           # store in experiments results\n",
     "print(f'RMSE: {rmse}')"
    ]
   },
@@ -3237,22 +3255,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Embed taxi rules - https://www1.nyc.gov/site/tlc/passengers/taxi-fare.page"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: Investigate"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Embed Nearest neighbors fares\n",
     "  \n",
     "Last approach, we're going to find the most similar trips that were performed in the past. Based on the [fare prices specification](https://www1.nyc.gov/site/tlc/passengers/taxi-fare.page), we can see that the day of the week, hour and distance make an impact in the final overall price. Therefore, we'll try to cover this features based on:\n",
@@ -4929,13 +4931,6 @@
     "- **GPS Traces database, cleaning and processing**  \n",
     "- **Demand Modelling and Demand Prediction**"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
