--- a/AMLD-2020/Presentation_AMLD_2020.ipynb
+++ b/AMLD-2020/Presentation_AMLD_2020.ipynb
@@ -68,6 +68,12 @@
     "\n",
     "Github Repository: https://github.com/caiomiyashiro/geospatial_data_analysis/tree/master/AMLD-2020  \n",
     "\n",
+    "# Installation\n",
+    "\n",
+    "If you did not already: Please follow the README file for setup instructions.\n",
+    "\n",
+    "Make sure that you have a kaggle account.\n",
+    "\n",
     "---------------\n",
     "  \n",
     "# Introduction\n",
@@ -75,6 +81,16 @@
     "Welcome to the workshop! Today you're going to learn several techniques related to the processing of geospatial data. We're going to use as background motivation the Kaggle dataset on [Prediction of Taxis Fares](https://www.kaggle.com/c/new-york-city-taxi-fare-prediction)\n",
     " \n",
     "<img src=\"images/wordcloud_.png\" width=\"500\"> \n",
+    "\n",
+    "You will learn:\n",
+    "* Exploratory Data Analysis\n",
+    "* Visualization of geospatial data\n",
+    "* Feature Engineering and Linear Regression\n",
+    "* Usage of router and traffic prototype\n",
+    "\n",
+    "## Presentation and full notebook\n",
+    "\n",
+    "We prepared a short version to follow during the workshop (this notebook Presentation_AMLD_2020.ipynb). To get more information (also after the workshop) have a look at Complete_AMLD_2020.ipynb. You can always check out this notebook if you get stucked and want to have a look at the solutions for the exercises.\n",
     "\n",
     "## Dataset\n",
     "\n",
@@ -4913,7 +4929,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
