updated introduction in both notebooks

--- a/AMLD-2020/Complete_AMLD_2020.ipynb
+++ b/AMLD-2020/Complete_AMLD_2020.ipynb
@@ -66,7 +66,13 @@
     "* Eva Jaumann: eva.jaumann@mytaxi.com  \n",
     "* Selim Onat: selim.onat@mytaxi.com  \n",
     "\n",
-    "Github Repository: https://github.com/caiomiyashiro/geospatial_data_analysis/tree/master/AMLD-2020  \n",
+    "Github Repository: https://github.com/caiomiyashiro/geospatial_data_analysis/tree/master/AMLD-2020 \n",
+    "\n",
+    "# Installation\n",
+    "\n",
+    "If you did not already: Please follow the README file for setup instructions.\n",
+    "\n",
+    "Make sure that you have a kaggle account.\n",
     "\n",
     "---------------\n",
     "  \n",
@@ -75,6 +81,12 @@
     "Welcome to the workshop! Today you're going to learn several techniques related to the processing of geospatial data. We're going to use as background motivation the Kaggle dataset on [Prediction of Taxis Fares](https://www.kaggle.com/c/new-york-city-taxi-fare-prediction) but our main goal is for you to learn the concepts and techniques on how to process such kind of datasets. We'll iteratively build models with higher level features and go through the concepts oh what do they mean and how were they created. At the end, we're going to check one more advanced example on how we can make use of mobility data in order to calculate and incorporate traffic information to your feature engineering processes:\n",
     " \n",
     "<img src=\"images/wordcloud_.png\" width=\"500\"> \n",
+    "\n",
+    "You will learn:\n",
+    "* Exploratory Data Analysis\n",
+    "* Visualization of geospatial data\n",
+    "* Feature Engineering and Linear Regression\n",
+    "* Usage of router and traffic prototype\n",
     "\n",
     "## Dataset\n",
     "\n",
