--- a/AMLD-2020/Presentation_AMLD_2020.ipynb
+++ b/AMLD-2020/Presentation_AMLD_2020.ipynb
@@ -97,7 +97,7 @@
     "<img src=\"images/kaggle_page.png\" width=\"700\"> \n",
     "<center>Kaggle Taxi Prediction Homepage Picture</center>  \n",
     "\n",
-    "The challenge of this dataset is the predict the final fare paid by user by just having a small set of variables to work with:\n",
+    "The challenge of this dataset is to predict the final fare paid by user by just having a small set of variables to work with:\n",
     "* **pickup_datetime**: Time that a user was picked-up by a taxi\n",
     "* **pickup_latitude**:   pickup location\n",
     "* **pickup_longitude**:  pickup location\n",
@@ -382,7 +382,7 @@
     "df['pickup_datetime'] = pd.to_datetime(df['pickup_datetime'])\n",
     "display(df.head())\n",
     "display(df.dtypes)\n",
-    "display(df.describe())\n"
+    "display(df.describe())"
    ]
   },
   {
