modified 2nd EDA

--- a/AMLD-2020/Complete_AMLD_2020.ipynb
+++ b/AMLD-2020/Complete_AMLD_2020.ipynb
@@ -3048,6 +3048,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-block alert-info\">     \n",
+    "    \n",
+    "added following cell \n",
+    "     \n",
+    "</div>    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train_3_analysis = df_train_3_analysis.loc[(df_train_3_analysis['pickup_longitude'] != df_train_3_analysis['dropoff_longitude']) & \n",
+    "                                              (df_train_3_analysis['pickup_latitude'] != df_train_3_analysis['dropoff_latitude'])]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Some leftover routes still have route_distance == 0, investigate"
    ]
   },
@@ -3242,6 +3263,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-block alert-info\">     \n",
+    "    \n",
+    "added following cell \n",
+    "\n",
+    "TODO: check why route is 0\n",
+    "     \n",
+    "</div>    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train_3_analysis = df_train_3_analysis.loc[df_train_3_analysis['route_distance_km'] != 0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Check price per kilometer"
    ]
   },
@@ -3278,6 +3321,17 @@
     "##########################################################\n",
     "### Filter where price per km > 5 - 95th percentile    ###\n",
     "##########################################################"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">     \n",
+    "    \n",
+    "Are we using df_train_3_analysis in the following cells?\n",
+    "\n",
+    "</div>    "
    ]
   },
   {
